--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <i class="fa fa-reorder" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <h1>Hi, I am <span>Testing Test</span> <br> From Kenya</h1>
-                <p>:A Full-Stack Developer</p>
+                <h1>Hi, I am <span>Testing Test</span> <br> From Kenya,</h1>
+                <p>A Full-Stack Developer</p>
             </div>
         </div>
     </div>
