--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 </div>
 
-<!-- =======================================SERVICES SECTION====================================== -->
+<!-- =======================================SERVICES SECTION======================================== -->
 <div id="services">
     <div class="container">
         <h1 class="sub-title">My Services</h1>
@@ -123,7 +123,7 @@
                 <h2>IT support</h2>
                 <p id="services-p-deco">As an IT Support Specialist, my mission is to ensure your technology
                      infrastructure runs smoothly and efficiently. 
-                     I provide a broad range of services to keep your systems secure, up-to-date and optimized..
+                     I provide a broad range of services to keep your systems secure, up-to-date and optimized.
                 </p>
                 <a href="#">Learn more</a>
             </div>
