--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
             </div>
             <div>
                 <i class="fa-solid fa-ticket"></i>
-                <h2>IT support</h2>
-                <p id="services-p-deco">As an IT Support Specialist, my mission is to ensure your technology
+                <h2>IT Support</h2>
+                <p id="services-p-deco">As an IT Support Specialist, My mission is to Ensure your technology
                      infrastructure runs smoothly and efficiently. 
                      I provide a broad range of services to keep your systems secure, up-to-date and optimized.
                 </p>
