Update page Title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/3809d82209.js" crossorigin="anonymous"></script>
-    <title>User example- Portfolio</title>
+    <title>Emmanuel Wekesi~Portfolio</title>
 </head>
 <body>
     <!-- ==============================HEADER================================== -->
