--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <i class="fa fa-reorder" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <h1>Hi,I am<span> Testing Test</span> <br> From Kenya,</h1>
+                <h1>Hi,I am<span> Wekesi Emmanuel</span> <br> From Kenya,</h1>
                 <p>A Full-Stack Developer</p>
             </div>
         </div>
@@ -173,8 +173,8 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fa fa-envelope"></i> testingtest@gmail.com</p>
-                <p><i class="fa fa-phone"></i> 07********</p>
+                <p><i class="fa fa-envelope"></i> wekesiemmanuel@gmail.com</p>
+                <p><i class="fa fa-phone"></i> 0702284602</p>
                 <div class="social-icons">
                     <a href=""><i class="fa fa-facebook-square"></i></a>
                     <a href=""><i class="fa fa-instagram"></i></a>
