--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <a href=""><i class="fa fa-linkedin"></i></a>
                     <a href=""><i class="fa fa-whatsapp"></i></a>
                 </div>
-                <a href="my-cv.pdf" download class="btn btn2">Download CV</a>
+                <a href="CV_FI(1).pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
