changed body text

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="tab-contents" id="experience">
                     <ul>
                         <li><span>2019-current</span><br>Studying Computer Science</li>
-                        <li><span>2022</span><br>Internship at Mera Tech</li>
+                        <li><span>2023</span><br>Internship at Kenya seed company</li>
                     </ul>
                     
                 </div>
