Change image directory

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="13.jpeg" alt="">
+                <img src="./images/13.jpeg" alt="">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
@@ -139,7 +139,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="work-1.png" alt="">
+                <img src="./images/work-1.png" alt="">
                 <div class="layer">
                     <h3>Eccomerce site</h3>
                     <p>A Fully Functional E-commerce web application sample</p>
@@ -147,7 +147,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="work-2.png" alt="">
+                <img src="./images/work-2.png" alt="">
                 <div class="layer">
                     <h3>University Web App</h3>
                     <p>A Sample of a university platform</p>
@@ -155,7 +155,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="work-3.png" alt="">
+                <img src="./images/work-3.png" alt="">
                 <div class="layer">
                     <h3>Disease Prediction System</h3>
                     <p>Web app for predicting diseases *N/B not for real world use</p>
