--- a/index.html
+++ b/index.html
@@ -56,14 +56,15 @@
                 <div class="tab-contents active-tab" id="skills">
                     <ul>
                         <li><span>Full-Stack Development</span><br>Web App Development</li>
+                        <li><span>Mobile App Development</span><br>Mobile Applications</li>
                         <li><span>Data Analytics</span><br>Statistical and Predictive Analysis<li>
                         <li><span>IT Support</span><br>system adminstation services</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="education">
                     <ul>
-                        <li><span>2019-current</span><br>Studying Computer Science</li>
-                        <li><span>2022-2023</span><br>CODECADEMY:javascript && SQL</li>
+                        <li><span>2019-2023</span><br>Studying Computer Science</li>
+                        <li><span>2022-2023</span><br>CODECADEMY:javascript and SQL</li>
                         <li><span>2021-2022</span><br>COURSERA:IT support specialization</li>
                         <li><span>2022-2023</span><br>COURSERA:Google Data analytics</li>
                     </ul>
@@ -141,17 +142,17 @@
             <div class="work">
                 <img src="./images/work-1.png" alt="">
                 <div class="layer">
-                    <h3>Eccomerce site</h3>
-                    <p>A Fully Functional E-commerce web application sample</p>
-                    <a href="#"><i class="fa fa-external-link-square"></i></a>
+                    <h3>E-learning Portal</h3>
+                    <p>A Fully Functional E-Learning portal</p>
+                    <a href="https://www.quickmall.co.ke"><i class="fa fa-external-link-square"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="./images/work-2.png" alt="">
                 <div class="layer">
                     <h3>University Web App</h3>
-                    <p>A Sample of a university platform</p>
-                    <a href="#"><i class="fa fa-external-link-square"></i></a>
+                    <p>University Marketing website</p>
+                    <a href="https://stedmak-2-college.vercel.app/"><i class="fa fa-external-link-square"></i></a>
                 </div>
             </div>
             <div class="work">
