Add target attribute

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div class="layer">
                     <h3>E-learning Portal</h3>
                     <p>A Fully Functional E-Learning portal</p>
-                    <a href="https://www.quickmall.co.ke"><i class="fa fa-external-link-square"></i></a>
+                    <a href="https://www.quickmall.co.ke" target="_blank"><i class="fa fa-external-link-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -152,7 +152,7 @@
                 <div class="layer">
                     <h3>University Web App</h3>
                     <p>University Marketing website</p>
-                    <a href="https://stedmak-2-college.vercel.app/"><i class="fa fa-external-link-square"></i></a>
+                    <a href="https://stedmak-2-college.vercel.app/" target="_blank"><i class="fa fa-external-link-square"></i></a>
                 </div>
             </div>
             <div class="work">
