Fix typing error

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="tab-contents active-tab" id="skills">
                     <ul>
                         <li><span>Full-Stack Development</span><br>Web App Development</li>
-                        <li><span>Mobile App Development</span><br>Mobile Applications</li>
+                        <li><span>Mobile App Development</span><br>Mobile Applications Development</li>
                         <li><span>Data Analytics</span><br>Statistical and Predictive Analysis<li>
                         <li><span>IT Support</span><br>system adminstation services</li>
                     </ul>
